--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -82,8 +82,8 @@ jobs:
   - script: |
       set -ex
       # LIBSWSSCOMMON
-      sudo dpkg -i libswsscommon_1.0.0_amd64.deb
-      sudo dpkg -i libswsscommon-dev_1.0.0_amd64.deb
+      sudo dpkg -i libswsscommon_1.0.0_${{ parameters.arch }}.deb
+      sudo dpkg -i libswsscommon-dev_1.0.0_${{ parameters.arch }}.deb
     workingDirectory: $(Pipeline.Workspace)/
     displayName: 'Install libswsscommon package'
   - script: |
