Revert "[202411][Build] Update to build bookworm debian package"

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -52,15 +52,15 @@ jobs:
       project: build
       pipeline: Azure.sonic-buildimage.common_libs
       runVersion: 'latestFromBranch'
-      runBranch: 'refs/heads/202411'
+      runBranch: 'refs/heads/master'
       path: $(Build.ArtifactStagingDirectory)/download
       ${{ if eq(parameters.arch, 'amd64') }}:
         artifact: common-lib
       ${{ else }}:
         artifact: common-lib.${{ parameters.arch }}
       patterns: |
-        target/debs/bookworm/libyang-*.deb
-        target/debs/bookworm/libyang_*.deb
+        target/debs/bullseye/libyang-*.deb
+        target/debs/bullseye/libyang_*.deb
     displayName: "Download libyang from common lib"
   - script: |
       set -ex
@@ -73,11 +73,11 @@ jobs:
       project: build
       pipeline: Azure.sonic-swss-common
       ${{ if eq(parameters.arch, 'amd64') }}:
-        artifact: sonic-swss-common-bookworm
+        artifact: sonic-swss-common
       ${{ else }}:
-        artifact: sonic-swss-common-bookworm.${{ parameters.arch }}
+        artifact: sonic-swss-common.${{ parameters.arch }}
       runVersion: 'latestFromBranch'
-      runBranch: 'refs/heads/202411'
+      runBranch: 'refs/heads/master'
       displayName: "Download sonic-swss-common"
   - script: |
       set -ex
